--- a/assets/styles.css
+++ b/assets/styles.css
@@ -49,6 +49,15 @@ header nav ul li {
     margin-left: 25px;
 }
 
+.box {
+    display: block;
+    width: 100%;
+    height: 5em;
+    background-color: var(--light);
+    opacity: 0.8;
+    background: linear-gradient(135deg, var(--dark)
+    25%, transparent 25%) -10px 0/ 20px 20px, linear-gradient(225deg, var(--mid) 25%, transparent 25%) -10px 0/ 20px 20px, linear-gradient(315deg, var(--dark) 25%, transparent 25%) 0px 0/ 20px 20px, linear-gradient(45deg,var(--mid) 25%, var(--light) 25%) 0px 0/ 20px 20px;}
+
 section {
     display: flex;
     flex-direction: row;
